2.tf
provider "aws" {
 region = "us-east-1"
}

resource "aws_instance" "Ubuntu" {
  count = 1
  ami = "ami-0c7af5fe939f2677f"
  instance_type = "t3.micro"
  tags = {
    Name    = "Ubuntu"
    Owner   = "greysquare1"
    Project = "terraform1"
  }
}

resource "aws_instance" "RedHat" {
  count = 1
  ami = "ami-0c7af5fe939f2677f"
  vpc_security_group_ids = [aws_security_group.greysquare.id]
  instance_type = "t3.micro"
  tags = {
    Name    = "Redhat"
    Owner   = "greysquare2"
    Project = "terraform2"
  }

  user_data = <<EOF
#!/bin/bash
sudo yum update -y
sudo yum install httpd -y
myip=$(curl http://169.254.169.254/latest/meta-data/local-ipv4)
echo "<h2>WebServer with IP: $myip</h2><br>Build by Terraform" > /var/www/html/index.html
sudo service httpd start
chkconfig httpd on
EOF
}

resource "aws_security_group" "greysquare" {
  name        = "Devops"
  description = "This Security group allows TLS and HTTP traffic"

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
